fix select arrow on small screensizes

--- a/less/components/pwn-select.less
+++ b/less/components/pwn-select.less
@@ -81,8 +81,8 @@
 
 	.pwn-select-arrow {
 		display: block;
-		position: relative;
-		float: left;
+		position: absolute;
+		right: 0;
 		height: 39px;
 		width: 31px;
 		background: @pwn-blue url(../images/select-arrow.png) 5px 2px no-repeat;
